# peckboard

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  README.md  build.rs  peckboard
.github/workflows/: build-linux-arm64.yml  build-linux-x86_64.yml  build-macos-arm64.yml  build-macos-x86_64.yml  build-windows-arm64.yml  build-windows-x86_64.yml  docs.yml
docs/: EPIC.md  Gemfile  README.md  _config.yml  architecture.md  configuration.md  core-concepts.md  experts.md  getting-started.md  index.html  index.md  plugins.md  session-hooks.md  style-guide.md
docs/_includes/: head_custom.html  mermaid_config.js  title.html
docs/api/: http-routes.md  websocket.md
docs/architecture/: auth-security.md  config.md  data-models.md  event-log.md  mcp-tools.md  overview.md  plugins.md  providers.md  services.md  worker-lifecycle.md
docs/frontend/: architecture.md
docs/proposals/: plan-persistence-and-parent-review.md
docs/tasks/: task_reference.md
migrations/00000000000001_initial/: down.sql  up.sql
migrations/00000000000002_user_tabs/: up.sql
migrations/00000000000002_worker_communication/: down.sql  up.sql
migrations/00000000000003_user_tabs/: down.sql  up.sql
migrations/1780879129_queued_message_model/: down.sql  up.sql
migrations/1780883838_card_dependencies/: down.sql  up.sql
migrations/1780900501_todos/: down.sql  up.sql
migrations/1780966657_cards_completed_at/: down.sql  up.sql
migrations/1780985065_expert_sessions/: down.sql  up.sql
migrations/1781025117_repeating_tasks/: down.sql  up.sql
migrations/1781033682_session_pagination_indexes/: down.sql  up.sql
migrations/1781053574_projects_workflow_required/: down.sql  up.sql
migrations/1781054693_cards_workflow_required/: down.sql  up.sql
migrations/1781058245_projects_pause_reason/: down.sql  up.sql
migrations/1781062932_project_workflow_instructions/: down.sql  up.sql
migrations/1781074848_pm_decisions/: down.sql  up.sql
migrations/1781075129_plugin_settings/: down.sql  up.sql
migrations/1781120408_usage_events/: down.sql  up.sql
migrations/1781202566_user_tabs_more_kinds/: down.sql  up.sql
migrations/1781586748_plugin_approvals/: down.sql  up.sql
migrations/1781592551_plugin_repositories/: down.sql  up.sql
migrations/1781682475_plugin_data_and_session_meta/: down.sql  up.sql
migrations/1781799188_delete_legacy_experts_data/: down.sql  up.sql
migrations/1781988765_session_system_prompt/: down.sql  up.sql
migrations/1782694873_claude_accounts/: down.sql  up.sql
migrations/1782713952_grok_accounts/: down.sql  up.sql
migrations/1782800001_session_handover/: down.sql  up.sql
migrations/1783047608_session_worker_step/: down.sql  up.sql
migrations/1783300000_session_user_id/: down.sql  up.sql
migrations/1783500000_session_context_reset/: down.sql  up.sql
migrations/1783600000_claude_account_token_refresh/: down.sql  up.sql
migrations/1783700000_model_autoswitch/: down.sql  up.sql
migrations/1783700001_system_prompts/: down.sql  up.sql
migrations/1783800000_system_prompt_name/: down.sql  up.sql
migrations/1783900000_plans/: down.sql  up.sql
migrations/1783950000_project_budgets/: down.sql  up.sql
migrations/1784000000_projects_worktree_isolation/: down.sql  up.sql
migrations/1784100000_temp_sessions/: down.sql  up.sql
migrations/1784200000_session_parent_link/: down.sql  up.sql
migrations/1784300000_kimi_accounts/: down.sql  up.sql
migrations/1784900000_env_vars/: down.sql  up.sql
scripts/: build.sh  dev-instance.sh  dev.sh  restart.sh  run.sh  verify.sh
src/: config.rs  error.rs  frontend.rs  handover.rs  keepalive.rs  lib.rs  main.rs  repeating.rs  security.rs  state.rs  subagent.rs  todo.rs  workflow.rs
src/auth/: mod.rs  (+6 more)
tests/: ask_expert.rs  ask_pm_expert.rs  askpass_flow.rs  backup_roundtrip.rs  card_completion.rs  clear_session_guards.rs  common_tools_plugin.rs  cursor_provider_live.rs  delete_worker_session.rs  diff_viewer_plugin.rs  expert_bootstrap.rs  expert_endpoints.rs  expert_spinup.rs  experts_plugin.rs  folder_isolation.rs  frugal_mode.rs  github_bridge_plugin.rs  kaiad_manager_plugin.rs  keepalive.rs  mcp_card_transitions.rs  mcp_http_transport.rs  mcp_oauth.rs  message_during_handover.rs  mock_provider.rs  nginx_manager_plugin.rs  notifier_plugin.rs  ollama_interrupt_respawn.rs  ollama_provider.rs  openai_compat_provider.rs  pagination_endpoints.rs  plugin_approvals.rs  plugin_http_routes.rs  plugin_todo_lifecycle.rs  plugins_endpoint.rs  pm_decisions.rs  pm_endpoints.rs  pm_escalation.rs  pm_expert.rs  pm_expert_persistence.rs  pm_mcp_tools.rs  (+17 more)
web/: .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+498 files in other folders)
